Adding --add-opens lines to surefire/test config to avoid unnecessary build warnings