@@ -124,7 +124,32 @@
         <surefire.plugin.version>3.0.0-M5</surefire.plugin.version>
         <clover.version>4.3.1</clover.version> <!-- max version allowed for JDK 7 builds -->
         <clover.db>${jjwt.root}/target/clover/clover.db</clover.db>
-        <surefire.argLine />
+        <surefire.argLine/>
+        <test.addOpens>
+            --add-opens java.base/java.time.zone=ALL-UNNAMED,
+            --add-opens java.base/java.lang.ref=ALL-UNNAMED,
+            --add-opens java.base/java.lang=ALL-UNNAMED,
+            --add-opens java.base/java.lang.reflect=ALL-UNNAMED,
+            --add-opens java.base/java.net=ALL-UNNAMED,
+            --add-opens java.base/java.nio.charset=ALL-UNNAMED,
+            --add-opens java.base/java.nio.file=ALL-UNNAMED,
+            --add-opens java.base/java.security.cert=ALL-UNNAMED,
+            --add-opens java.base/java.text=ALL-UNNAMED,
+            --add-opens java.base/java.util.regex=ALL-UNNAMED,
+            --add-opens java.base/java.util.stream=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED,
+            --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED,
+            --add-opens java.base/java.time=ALL-UNNAMED,
+            --add-opens java.base/java.util=ALL-UNNAMED,
+            --add-opens java.base/java.io=ALL-UNNAMED,
+            --add-opens java.base/java.security=ALL-UNNAMED,
+            --add-opens java.base/jdk.internal.loader=ALL-UNNAMED,
+            --add-opens java.base/sun.nio.fs=ALL-UNNAMED,
+            --add-opens java.base/sun.security.x509=ALL-UNNAMED,
+            --add-opens java.base/sun.security.util=ALL-UNNAMED,
+            --add-opens java.logging/java.util.logging=ALL-UNNAMED
+        </test.addOpens>
 
     </properties>
 
@@ -603,21 +628,17 @@
             </activation>
             <properties>
                 <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
-                <surefire.argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</surefire.argLine>
+                <surefire.argLine>${test.addOpens}, --illegal-access=debug</surefire.argLine>
             </properties>
         </profile>
         <profile>
-            <id>jdk16AndLater</id>
+            <id>jdk17AndLater</id>
             <activation>
-                <jdk>[16,)</jdk>
+                <jdk>[17,)</jdk>
             </activation>
             <properties>
-                <surefire.argLine>
-                    --add-opens java.base/java.lang=ALL-UNNAMED
-                    --add-opens java.base/java.lang.ref=ALL-UNNAMED
-                    --add-opens java.base/java.util=ALL-UNNAMED
-                    --add-opens java.base/sun.security.util=ALL-UNNAMED
-                </surefire.argLine>
+                <maven.javadoc.additionalOptions>-html5</maven.javadoc.additionalOptions>
+                <surefire.argLine>${test.addOpens}</surefire.argLine>
             </properties>
         </profile>
         <profile>
